modifique el temaño de imgs

--- a/index.html
+++ b/index.html
@@ -60,14 +60,15 @@
                 <p>Remeras</p>
             </div>
         </div>
+
         <div class="opciones">
             <div class="opcion">
                 <img src="./img/Remera-sublimar-hombre--removebg-preview.png" alt="">
                 <p>Remeras</p>
             </div>
             <div class="opcion">
-                <img src="./img/Remera-sublimar-hombre--removebg-preview.png" alt="">
-                <p>Remeras</p>
+                <img src="./img/buzo-canguro-rustico-beige1-20507034b4a83904cd16880467893341-640-0-removebg-preview (1).png" alt="">
+                <p>Buzos</p>
             </div>
             <div class="opcion">
                 <img src="./img/Remera-sublimar-hombre--removebg-preview.png" alt="">
