--- a/pages/secciones.html
+++ b/pages/secciones.html
@@ -46,16 +46,16 @@
 
             <div class="categories-dentro">
                 <a href="../index.html" class="category">
-                <img src="../img/buzo-canguro-rustico-beige1-20507034b4a83904cd16880467893341-640-0-removebg-preview (1).png" alt="buzos">
+                <img src="../img/jean-removebg-preview.png" alt="jenas">
                 </a>
-                <p>Buzos</p>
+                <p>Jeans</p>
             </div>
 
             <div class="categories-dentro">
                 <a href="../index.html" class="category">
-                <img src="../img/buzo-canguro-rustico-beige1-20507034b4a83904cd16880467893341-640-0-removebg-preview (1).png" alt="buzos">
+                <img src="../img/Remera-sublimar-hombre--removebg-preview.png" alt="remera">
                 </a>
-                <p>Buzos</p>
+                <p>Remera</p>
             </div>
 
             <div class="categories-dentro">
