--- a/pages/bienvenida.html
+++ b/pages/bienvenida.html
@@ -15,7 +15,7 @@
 <p id="e">¡Encuentra todo lo que quieras aquí!</p>
 
 <div class="bon">
-<button type="button" class="kali">Ingresar</button>
+<button type="button" class="kali"><a href="filtro.html">Ingresar</a></button>
 <button type="button" class="kali">registrarse</button>
 </div>
 <p id="d"><a id="d" href=""> Continuar como invitado</a></p>
